--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 400;
 }
+
+.shimmer {
+  animation: shimmer 1.5s infinite;
+  background: linear-gradient(
+    90deg,
+    rgba(240, 240, 240, 1) 25%,
+    rgba(245, 245, 245, 1) 50%,
+    rgba(240, 240, 240, 1) 75%
+  );
+  background-size: 200%;
+}
